adjusted pom xml to generate report